--- a/src/routes/home/Home.css
+++ b/src/routes/home/Home.css
@@ -1,12 +1,3 @@
-/**
- * React Starter Kit (https://www.reactstarterkit.com/)
- *
- * Copyright © 2014-present Kriasoft, LLC. All rights reserved.
- *
- * This source code is licensed under the MIT license found in the
- * LICENSE.txt file in the root directory of this source tree.
- */
-
 @import '../../components/variables.css';
 
 .root {
@@ -20,30 +11,14 @@
   max-width: var(--max-content-width);
 }
 
-.newsItem {
-  margin: 0 0 2rem;
+.timezone {
+  width: 300px;
+  display: inline-block;
+  margin-right: 15px;
 }
 
-.newsTitle {
-  font-size: 1.5rem;
+.cardTopRow {
+  display: flex;
+  justify-content: space-between;
 }
 
-.newsDesc {
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6 {
-    font-size: 1.125rem;
-  }
-
-  pre {
-    white-space: pre-wrap;
-    font-size: 0.875rem;
-  }
-
-  img {
-    max-width: 100%;
-  }
-}
