--- a/src/routes/home/Home.css
+++ b/src/routes/home/Home.css
@@ -9,6 +9,8 @@
   margin: 0 auto;
   padding: 0 0 40px;
   max-width: var(--max-content-width);
+  display: flex;
+  flex-direction: column;
 }
 
 .timezone {
@@ -20,5 +22,9 @@
 .cardTopRow {
   display: flex;
   justify-content: space-between;
+}
+
+.topRow {
+  display: flex;
 }
 
