--- a/src/routes/users/Users.css
+++ b/src/routes/users/Users.css
@@ -19,3 +19,10 @@
   margin-right: 10px;
 }
 
+.topRow {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
