--- a/src/routes/home/Home.css
+++ b/src/routes/home/Home.css
@@ -35,3 +35,16 @@
   margin-right: 20px;
 }
 
+.cardButtons {
+  display: flex;
+  margin-top: 10px;
+}
+
+.cardButtons button:first-child {
+  margin-right: 5px;
+}
+
+.cardButtons button {
+  font-size: 12px;
+}
+
